ADD: Code: Remote Client Interface

--- a/Proj/code/RC/remote-client/CMakeLists.txt
+++ b/Proj/code/RC/remote-client/CMakeLists.txt
@@ -34,6 +34,12 @@ if(ANDROID)
     mainwindow.cpp
     mainwindow.h
     mainwindow.ui
+    adminwindow.cpp
+    adminwindow.h
+    adminwindow.ui
+    brandwindow.cpp
+    brandwindow.h
+    brandwindow.ui
     ${TS_FILES}
   )
 else()
@@ -42,6 +48,12 @@ else()
     mainwindow.cpp
     mainwindow.h
     mainwindow.ui
+    adminwindow.cpp
+    adminwindow.h
+    adminwindow.ui
+    brandwindow.cpp
+    brandwindow.h
+    brandwindow.ui
     ${TS_FILES}
   )
 endif()
