ADD: LS: GIF generation

--- a/Proj/code/LS/LSApp/CMakeLists.txt
+++ b/Proj/code/LS/LSApp/CMakeLists.txt
@@ -11,10 +11,9 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# ======================== OPENCV
 set(OpenCV_DIR "/usr/local/lib/cmake/opencv4")
 find_package(OpenCV REQUIRED)
-
-find_package(Magick++ REQUIRED)
 #find_package(OpenCV REQUIRED PATHS "/usr/local/lib/")
 #include_directories(${OpenCV_INCLUDE_DIRS})
 
@@ -27,6 +26,23 @@ message(STATUS "    version: ${OpenCV_VERSION}")
 message(STATUS "    libraries: ${OpenCV_LIBS}")
 message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
 
+
+# ====================== Imagemagick
+find_program(MAGICK_CONFIG "Magick++-config")
+execute_process(COMMAND "${MAGICK_CONFIG}" "--libs" OUTPUT_VARIABLE MAGICK_LD_FLAGS)
+# Remove trailing whitespace (CMAKE warns about this)
+string(STRIP "${MAGICK_LD_FLAGS}" MAGICK_LD_FLAGS)
+# Append all flags to CMAKE_CXX_FLAGS
+#set(CMAKE_CXX_FLAGS "${CMAKE_CPP_FLAGS} -std=c++11 ${MAGICK_CXX_FLAGS} ${MAGICK_LD_FLAGS}")
+
+message("LDFlags: ${MAGICK_LD_FLAGS}")
+
+add_definitions( -DMAGICKCORE_QUANTUM_DEPTH=16 )
+add_definitions( -DMAGICKCORE_HDRI_ENABLE=0 )
+find_package(ImageMagick COMPONENTS Magick++)
+include_directories(${ImageMagick_INCLUDE_DIRS})
+
+# ============================ Qt
 set(CMAKE_PREFIX_PATH "/home/zmpl/Qt/5.13.2/gcc_64/lib/cmake")
 
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets VirtualKeyboard REQUIRED)
@@ -34,6 +50,7 @@ find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets VirtualKeyboard REQUIRED)
 
 #find_package(pthread REQUIRED)
 
+# ================ TWITCURL
 set(TWITCURL_LIB twitcurl)
 
 set(PROJECT_SOURCES
@@ -93,7 +110,7 @@ endif()
 
 # CMAKE IS CASE SENSITIVE
 # src: https://stackoverflow.com/a/60693001/17836786
-target_link_libraries(${PROJECT_NAME} PRIVATE ${OpenCV_LIBS} Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::VirtualKeyboard pthread ${TWITCURL_LIB})
+target_link_libraries(${PROJECT_NAME} PRIVATE ${OpenCV_LIBS} Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::VirtualKeyboard pthread ${TWITCURL_LIB} ${MAGICK_LD_FLAGS} ${ImageMagick_LIBRARIES})
 
 # my_tgt can be an executable, library, or module.
 #target_link_options(${PROJECT_NAME} PRIVATE "LINKER:-lopencv_core -lopencv_video -lopencv_videoio")
