ADD: LS: syncObject to ease condition variables operation

--- a/Proj/code/LS/LSApp/CMakeLists.txt
+++ b/Proj/code/LS/LSApp/CMakeLists.txt
@@ -83,6 +83,9 @@ set(PROJECT_SOURCES
   # post
   post.h
   post.cpp
+  #syncObject
+  syncObject.h
+  syncObject.cpp
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
