--- a/Proj/code/Local-system/all-report/DDrivers/Frag/Makefile
+++ b/Proj/code/Local-system/all-report/DDrivers/Frag/Makefile
@@ -1,8 +1,8 @@
 obj-m:=frag.o
 frag-objs:=fragmodule.o utils.o
 KDIR := /home/hugof37/Desktop/ESRG/buildroot/buildroot-2021.02.5/output/build/linux-custom
-ARCH ?= arm
-CROSS_COMPILE ?= /home/hugof37/Desktop/ESRG/buildroot/buildroot-2021.02.5/output/host/bin/arm-buildroot-linux-gnueabihf-
+ARCH ?= arm64
+CROSS_COMPILE ?= /home/hugof37/Desktop/ESRG/buildroot/buildroot-2021.02.5/output/host/bin/aarch64-buildroot-linux-gnu-
 
 export ARCH CROSS_COMPILE
 
