--- a/Proj/code/Local-system/all-report/DDrivers/USS/Makefile
+++ b/Proj/code/Local-system/all-report/DDrivers/USS/Makefile
@@ -1,7 +1,7 @@
 obj-m += hc-sro4.o
 
-ARCH=arm
-CROSS_COMPILE=/home/hugof37/Desktop/ESRG/buildroot/buildroot-2021.02.5/output/host/bin/arm-buildroot-linux-gnueabihf-
+ARCH=arm64
+CROSS_COMPILE=/home/hugof37/Desktop/ESRG/buildroot/buildroot-2021.02.5/output/host/bin/aarch64-buildroot-linux-gnu-
 # KERNEL_DIR=/lib/modules/3.18.0-trunk-rpi/build
 KERNEL_DIR=/home/hugof37/Desktop/ESRG/buildroot/buildroot-2021.02.5/output/build/linux-custom
 # KERNEL_DIR=../linux
