--- a/Proj/code/RS/TCP-IP/tcp-another/ESRG_class-main/Server/Makefile
+++ b/Proj/code/RS/TCP-IP/tcp-another/ESRG_class-main/Server/Makefile
@@ -1,11 +1,11 @@
 #CC= arm-linux-gcc
-#CC=gcc
+CC=gcc
 
 CFLAGS = -lrt
 HEAD = ../Parser/ucmd.h
 
 all :
-	$(CC_S) -pthread -o server.elf server.c ../Parser/ucmd.c $(CFLAGS)
+	$(CC) -pthread -o server.elf server.c ../Parser/ucmd.c $(CFLAGS)
 
 transfer_server: 
 	scp server.elf root@$(IP):/$(FOLDER)
